# agentmem

./: Cargo.toml  README.md  install.sh
.github/release-assets/: LAUNCH_CHECKLIST.md  RELEASE_NOTES.md  hackernews-post.md  reddit-posts.md  twitter-thread.md
.github/workflows/: release.yml
src/: cli.rs  config.rs  daemon.rs  main.rs
src/adapter/: claude.rs  cursor.rs  mod.rs  opencode.rs  schema.rs
src/extractor/: mod.rs  summarizer.rs  watcher.rs
src/injector/: tui.rs
src/storage/: json_store.rs  mod.rs  sqlite_store.rs
src/webui/: server.rs
